// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`encodeCode39 Mapping matches the snapshot for ' ' 1`] = `
Array [
  "N",
  "w",
  "W",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '$' 1`] = `
Array [
  "N",
  "w",
  "N",
  "w",
  "N",
  "w",
  "N",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '%' 1`] = `
Array [
  "N",
  "n",
  "N",
  "w",
  "N",
  "w",
  "N",
  "w",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '*' 1`] = `
Array [
  "N",
  "w",
  "N",
  "n",
  "W",
  "n",
  "W",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '+' 1`] = `
Array [
  "N",
  "w",
  "N",
  "n",
  "N",
  "w",
  "N",
  "w",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '.' 1`] = `
Array [
  "W",
  "w",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '/' 1`] = `
Array [
  "N",
  "w",
  "N",
  "w",
  "N",
  "n",
  "N",
  "w",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '-' 1`] = `
Array [
  "N",
  "w",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '0' 1`] = `
Array [
  "N",
  "n",
  "N",
  "w",
  "W",
  "n",
  "W",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '1' 1`] = `
Array [
  "W",
  "n",
  "N",
  "w",
  "N",
  "n",
  "N",
  "n",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '2' 1`] = `
Array [
  "N",
  "n",
  "W",
  "w",
  "N",
  "n",
  "N",
  "n",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '3' 1`] = `
Array [
  "W",
  "n",
  "W",
  "w",
  "N",
  "n",
  "N",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '4' 1`] = `
Array [
  "N",
  "n",
  "N",
  "w",
  "W",
  "n",
  "N",
  "n",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '5' 1`] = `
Array [
  "W",
  "n",
  "N",
  "w",
  "W",
  "n",
  "N",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '6' 1`] = `
Array [
  "N",
  "n",
  "W",
  "w",
  "W",
  "n",
  "N",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '7' 1`] = `
Array [
  "N",
  "n",
  "N",
  "w",
  "N",
  "n",
  "W",
  "n",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '8' 1`] = `
Array [
  "W",
  "n",
  "N",
  "w",
  "N",
  "n",
  "W",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for '9' 1`] = `
Array [
  "N",
  "n",
  "W",
  "w",
  "N",
  "n",
  "W",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'A' 1`] = `
Array [
  "W",
  "n",
  "N",
  "n",
  "N",
  "w",
  "N",
  "n",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'B' 1`] = `
Array [
  "N",
  "n",
  "W",
  "n",
  "N",
  "w",
  "N",
  "n",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'C' 1`] = `
Array [
  "W",
  "n",
  "W",
  "n",
  "N",
  "w",
  "N",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'D' 1`] = `
Array [
  "N",
  "n",
  "N",
  "n",
  "W",
  "w",
  "N",
  "n",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'E' 1`] = `
Array [
  "W",
  "n",
  "N",
  "n",
  "W",
  "w",
  "N",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'F' 1`] = `
Array [
  "N",
  "n",
  "W",
  "n",
  "W",
  "w",
  "N",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'G' 1`] = `
Array [
  "N",
  "n",
  "N",
  "n",
  "N",
  "w",
  "W",
  "n",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'H' 1`] = `
Array [
  "W",
  "n",
  "N",
  "n",
  "N",
  "w",
  "W",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'I' 1`] = `
Array [
  "N",
  "n",
  "W",
  "n",
  "N",
  "w",
  "W",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'J' 1`] = `
Array [
  "N",
  "n",
  "N",
  "n",
  "W",
  "w",
  "W",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'K' 1`] = `
Array [
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "w",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'L' 1`] = `
Array [
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "w",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'M' 1`] = `
Array [
  "W",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "w",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'N' 1`] = `
Array [
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "w",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'O' 1`] = `
Array [
  "W",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "w",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'P' 1`] = `
Array [
  "N",
  "n",
  "W",
  "n",
  "W",
  "n",
  "N",
  "w",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'Q' 1`] = `
Array [
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "w",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'R' 1`] = `
Array [
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "w",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'S' 1`] = `
Array [
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "W",
  "w",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'T' 1`] = `
Array [
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "W",
  "w",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'U' 1`] = `
Array [
  "W",
  "w",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'V' 1`] = `
Array [
  "N",
  "w",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'W' 1`] = `
Array [
  "W",
  "w",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'X' 1`] = `
Array [
  "N",
  "w",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "W",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'Y' 1`] = `
Array [
  "W",
  "w",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
]
`;

exports[`encodeCode39 Mapping matches the snapshot for 'Z' 1`] = `
Array [
  "N",
  "w",
  "W",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
]
`;

exports[`encodeCode39 matches the snapshot for the full alphabet 1`] = `
Array [
  "N",
  "w",
  "N",
  "n",
  "W",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "w",
  "W",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "w",
  "N",
  "w",
  "N",
  "w",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "w",
  "N",
  "w",
  "N",
  "w",
  "N",
  "n",
  "N",
  "w",
  "N",
  "n",
  "N",
  "w",
  "N",
  "w",
  "N",
  "n",
  "N",
  "w",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "W",
  "n",
  "W",
  "w",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "w",
  "N",
  "w",
  "N",
  "n",
  "N",
  "w",
  "N",
  "n",
  "N",
  "n",
  "N",
  "w",
  "W",
  "n",
  "W",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "w",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "W",
  "w",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "W",
  "n",
  "W",
  "w",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "w",
  "W",
  "n",
  "N",
  "n",
  "W",
  "n",
  "W",
  "n",
  "N",
  "w",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "w",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "w",
  "N",
  "n",
  "W",
  "n",
  "W",
  "n",
  "W",
  "n",
  "N",
  "w",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "w",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "w",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "w",
  "N",
  "n",
  "W",
  "n",
  "W",
  "n",
  "W",
  "n",
  "N",
  "w",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "w",
  "N",
  "n",
  "W",
  "n",
  "W",
  "n",
  "N",
  "n",
  "W",
  "w",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "W",
  "w",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "w",
  "W",
  "n",
  "W",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "w",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "w",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "w",
  "W",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "w",
  "W",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "w",
  "W",
  "n",
  "W",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "w",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "w",
  "W",
  "n",
  "W",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "w",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "W",
  "n",
  "N",
  "w",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "w",
  "W",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "w",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "W",
  "w",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "W",
  "w",
  "N",
  "n",
  "W",
  "w",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "N",
  "w",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "W",
  "n",
  "W",
  "w",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "w",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "W",
  "n",
  "W",
  "w",
  "N",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "w",
  "W",
  "n",
  "W",
  "n",
  "N",
  "n",
  "N",
  "n",
  "N",
  "w",
  "N",
  "n",
  "W",
  "n",
  "W",
  "n",
  "N",
]
`;
